<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="next">Далее</string>
    <string name="prev">Назад</string>
    <string name="conformation">Подтвердить</string>
    <string name="saving">Сохранить</string>
    <string name="settings">Настройки темы</string>
    <string name="starting">Начать обработку</string>
    <string name="logo_description">Логотип приложения</string>
    <string name="final_photo_description">Итоговое фото после обработки</string>
    <string name="changing_photo_description">Обрабатываемое фото</string>
    <string name="white_theme">Светлая тема</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="beach_theme">Пляж</string>
    <string name="green_theme">Природа</string>
    <string name="theme_icon_description">Иконка темы</string>
    <string name="brightness_icon_description">Иконка яркости</string>
    <string name="reset_icon_description">Иконка сброса</string>
</resources>
