<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishingScreen">

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="232dp"
        android:layout_height="213dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/final_photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/button52"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:text="@string/saving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultImage" />

    <Button
        android:id="@+id/button51"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:text="@string/prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button52" />

</androidx.constraintlayout.widget.ConstraintLayout>